# cits5506-iot-parkreserve-group29

./: .gitignore  CLAUDE.md  README.md  proposal.md
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  run_dev.py
backend/app/: __init__.py  __main__.py  config.py  extensions.py  web.py
backend/app/api/: __init__.py  auth.py  bays.py  conflicts.py  health.py  payments.py  plates.py  reservations.py
backend/app/jobs/: __init__.py  purge_evidence_images.py  reconcile_reservations.py
backend/app/models/: __init__.py  base.py  bay.py  bay_event.py  conflict.py  licence_plate.py  (+5 more)
backend/deploy/: Caddyfile  bootstrap.sh  parkreserve-web.service
backend/docker/: Dockerfile  docker-compose.yml
backend/migrations/: env.py
backend/scripts/: mock_pi_publisher.py  mock_pi_subscriber.py  seed.py  seed_data.py
backend/tests/: __init__.py  conftest.py  test_alembic_migration.py  test_api_auth.py  test_api_bays.py  test_api_conflicts.py  test_api_conflicts_more.py  test_api_extras.py  test_api_health.py  test_api_payments.py  test_api_plates.py  test_api_reservations.py  test_app_factory.py  test_bay_service_extra.py  test_config.py  test_conflict_service_extra.py  test_event_dispatcher_extra.py  test_event_dispatcher_more.py  test_event_handlers.py  test_jobs_startup.py  test_mqtt_client.py  test_mqtt_commands.py  test_mqtt_handlers.py  test_mqtt_ingest.py  test_mqtt_init.py  test_mqtt_topics.py  test_payment_service.py  test_publisher.py  test_purge_job.py  test_reconcile_job.py  test_resilience_reconnect.py  test_runtime_entrypoints.py  test_seed_data.py  test_strong_conflict_recovery.py
(+188 files in other folders)
