[project]
name = "parkreserve-backend"
version = "0.1.0"
description = "ParkReserve cloud backend — CITS5506 group 29"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.7",
    "flask-jwt-extended==4.6.0",
    "flask-socketio==5.3.7",
    "flask-cors==4.0.1",
    "sqlalchemy==2.0.32",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "paho-mqtt==2.1.0",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "argon2-cffi==23.1.0",
    "apscheduler==3.10.4",
    "structlog==24.4.0",
    "python-dotenv==1.0.1",
    "eventlet==0.37.0",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-postgresql==6.1.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "factory-boy==3.3.1",
    "freezegun==1.5.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests that require a running MQTT broker",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
